# zkencrypt-fhe

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  setup_hpu.sh
.github/workflows/: approve_label.yml  aws_tfhe_backward_compat_tests.yml  aws_tfhe_fast_tests.yml  aws_tfhe_integer_tests.yml  aws_tfhe_noise_checks.yml  aws_tfhe_signed_integer_tests.yml  aws_tfhe_tests.yml  aws_tfhe_wasm_tests.yml  benchmark_cpu.yml  benchmark_cpu_common.yml  benchmark_cpu_weekly.yml  benchmark_ct_key_sizes.yml  benchmark_documentation.yml  benchmark_gpu.yml  benchmark_gpu_4090.yml  benchmark_gpu_common.yml  benchmark_gpu_coprocessor.yml  benchmark_gpu_dex.yml  benchmark_gpu_dex_common.yml  benchmark_gpu_dex_weekly.yml  benchmark_gpu_erc20.yml  benchmark_gpu_erc20_common.yml  benchmark_gpu_erc20_weekly.yml  benchmark_gpu_weekly.yml  benchmark_hpu.yml  benchmark_hpu_common.yml  benchmark_perf_regression.yml  benchmark_tfhe_fft.yml  benchmark_tfhe_ntt.yml  benchmark_wasm_client.yml  cargo_audit.yml  cargo_test_ntt.yml  check_commit.yml  ci_lint.yml  code_coverage.yml  csprng_randomness_tests.yml  gpu_4090_tests.yml  gpu_code_validation_tests.yml  gpu_fast_h100_tests.yml  gpu_fast_tests.yml  (+24 more)
apps/trivium/: Cargo.toml
backends/tfhe-cuda-backend/: Cargo.toml  README.md
backends/tfhe-hpu-backend/: Cargo.toml
backends/tfhe-hpu-backend/config_store/v80/: README.md
backends/tfhe-hpu-backend/src/ffi/v80/: ami.rs  qdma.rs
backends/tfhe-hpu-backend/src/ffi/v80/pdi/: uuid.rs
implementation_notes/tfhe-ntt/: gh_issue_2037_barrett_range.md
mockups/tfhe-hpu-mockup/: Cargo.toml
tasks/: Cargo.toml
tests/: Cargo.toml
tfhe/: Cargo.toml  cbindgen.toml
tfhe-benchmark/: Cargo.toml
tfhe-csprng/: Cargo.toml  LICENSE  README.md
tfhe-fft/: Cargo.toml  README.md
tfhe-ntt/: Cargo.toml  LICENSE
tfhe-ntt/src/: lib.rs
tfhe-zk-pok/: Cargo.toml
tfhe/docs/: README.md  SUMMARY.md
tfhe/docs/configuration/hpu-acceleration/: run-on-hpu.md
tfhe/docs/explanations/: tfhe-deep-dive.md
tfhe/docs/fhe-computation/advanced-features/: noise-squashing.md
tfhe/docs/getting-started/: README.md  quick-start.md  security-and-cryptography.md
tfhe/docs/getting-started/benchmarks/cpu/: cpu-integer-operations.md  cpu-programmable-bootstrapping.md
tfhe/docs/getting-started/benchmarks/gpu/: gpu-integer-operations.md  gpu-programmable-bootstrapping.md
tfhe/docs/getting-started/benchmarks/hpu/: hpu-integer-operations.md  hpu-programmable-bootstrapping.md
tfhe/docs/integration/: js-on-wasm-api.md
tfhe/docs/tutorials/: ascii-fhe-string.md  see-all-tutorials.md  sha256-bool.md
tfhe/src/: lib.rs
tfhe/src/core_crypto/commons/math/decomposition/: mod.rs
tfhe/src/high_level_api/strings/tests/: mod.rs
tfhe/src/integer/gpu/server_key/radix/: aes.rs
tfhe/src/integer/server_key/: mod.rs
tfhe/src/integer/server_key/radix_parallel/tests_unsigned/: mod.rs
tfhe/src/integer/wopbs/: test.rs
utils/param_dedup/: Cargo.toml
utils/tfhe-backward-compat-data/: Cargo.toml
utils/tfhe-backward-compat-data/crates/add_new_version/template/: Cargo.toml.j2
utils/tfhe-backward-compat-data/crates/generate/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_0_10/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_0_11/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_0_8/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_1_0/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_1_1/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_1_3/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_1_4/: Cargo.toml
utils/tfhe-backward-compat-data/crates/generate_1_5/: Cargo.toml
utils/tfhe-lints/: Cargo.toml
utils/tfhe-versionable/: Cargo.toml
utils/tfhe-versionable-derive/: Cargo.toml
