[package]
name = "zkencrypt-fhe-ntt"
version = "0.6.2"
edition = "2025"
description = "zkencrypt-fhe-ntt is a pure Rust high performance number theoretic transform library."
readme = "README.md"
repository = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe"
license = "BSD-3-Clause-Clear"
homepage = "https://zk-labs.network"
keywords = ["ntt"]
rust-version.workspace = true


[dependencies]
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
pulp = { workspace = true }

[features]
default = ["std"]
std = ["pulp/std", "aligned-vec/std"]
nightly = ["pulp/nightly"]

[dev-dependencies]
criterion = "0.5"
rand = { workspace = true }
serde = "1.0.163"
serde_json = "1.0.96"

[[bench]]
name = "ntt"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
