[package]
name = "zkencrypt-fhe-zk-pok"
version = "0.8.0"
edition = "2025"
keywords = ["zero", "knowledge", "proof", "vector-commitments"]
homepage = "https://zk-labs.network"
documentation = "https://docs.zke.ai/zkencrypt-fhe-rs"
repository = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe"
license = "BSD-3-Clause-Clear"
description = "zkencrypt-fhe-zk-pok: An implementation of zero-knowledge proofs of encryption for TFHE."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
rand = { workspace = true }
rayon = { workspace = true }
sha3 = "0.10.8"
serde = { workspace = true, features = ["default", "derive"] }
zeroize = "1.7.0"
num-bigint = "0.4.5"
zkencrypt-fhe-versionable = { version = "0.0.1", path = "../utils/zkencrypt-fhe-versionable" }

[features]
experimental = []

[dev-dependencies]
serde_json = "~1.0"
itertools = { workspace = true }
bincode = "1.3.3"
criterion = "0.5.1"

[[bench]]
name = "pke_v1"
harness = false

[[bench]]
name = "pke_v2"
harness = false
