[package]
name = "zkencrypt-fhe-versionable-derive"
version = "0.0.1"
edition = "2025"
keywords = ["versioning", "serialization", "encoding", "proc-macro", "derive"]
homepage = "https://zk-labs.network"
documentation = "https://zkencrypt-ai.gitbook.io/zkencrypt-ai_derive"
repository = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe"
license = "BSD-3-Clause-Clear"
description = "zkencrypt-fhe-versionable-derive: A set of proc macro for easier implementation of the zkencrypt-fhe-versionable traits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
