[package]
name = "generate_0_11"
edition = "2024"
version = "0.9.0"
license = "BSD-3-Clause-Clear"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

# TFHE-rs
tfhe = { git = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe.git", tag = "zkencrypt-fhe-rs-0.11.0", features = [
    "boolean",
    "integer",
    "shortint",
    "zk-pok",
    "experimental-force_fft_algo_dif4",
] }
zkencrypt-fhe-versionable = { git = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe.git", tag = "zkencrypt-fhe-rs-0.11.0" }

zkencrypt-fhe-backward-compat-data = { path = "../.." }
