[package]
name = "generate_1_3"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true

# TFHE-rs
tfhe = { git = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe.git", tag = "zkencrypt-fhe-rs-1.3.0", features = [
    "boolean",
    "integer",
    "shortint",
    "zk-pok",
    "experimental-force_fft_algo_dif4",
] }
zkencrypt-fhe-versionable = { git = "https://github.com/ZKEncrypt-AI/zkencrypt-fhe.git", tag = "zkencrypt-fhe-rs-1.3.0" }

zkencrypt-fhe-backward-compat-data = { path = "../.." }
